// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Infinite matches snapshot when no data present 1`] = `
<Infinite
  fetchData={[MockFunction]}
  renderItem={[Function]}
>
  <div
    className="infinite"
  >
    <div
      className="infinite__loader infinite__loader_initial"
    >
      <Loader>
        <div
          className="loader"
        >
          <svg
            className="loader__icon"
            id="Layer_1"
            version="1.1"
            viewBox="0 0 24 30"
            x="0px"
            xmlSpace="preserve"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
            y="0px"
          >
            <rect
              fill="#333"
              height="5"
              width="4"
              x="0"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
            <rect
              fill="#333"
              height="5"
              width="4"
              x="10"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0.15s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0.15s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
            <rect
              fill="#333"
              height="5"
              width="4"
              x="20"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0.3s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0.3s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
          </svg>
        </div>
      </Loader>
    </div>
  </div>
</Infinite>
`;

exports[`Infinite matches snapshot when one page passed 1`] = `
<Infinite
  fetchData={
    [MockFunction] {
      "calls": Array [
        Array [
          Array [
            1,
          ],
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": Promise {},
        },
      ],
    }
  }
  renderItem={[Function]}
>
  <div
    className="infinite"
  >
    <div
      className="infinite__loader infinite__loader_initial"
    >
      <Loader>
        <div
          className="loader"
        >
          <svg
            className="loader__icon"
            id="Layer_1"
            version="1.1"
            viewBox="0 0 24 30"
            x="0px"
            xmlSpace="preserve"
            xmlns="http://www.w3.org/2000/svg"
            xmlnsXlink="http://www.w3.org/1999/xlink"
            y="0px"
          >
            <rect
              fill="#333"
              height="5"
              width="4"
              x="0"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
            <rect
              fill="#333"
              height="5"
              width="4"
              x="10"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0.15s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0.15s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
            <rect
              fill="#333"
              height="5"
              width="4"
              x="20"
              y="13"
            >
              <animate
                attributeName="height"
                attributeType="XML"
                begin="0.3s"
                dur="0.6s"
                repeatCount="indefinite"
                values="5;21;5"
              />
              <animate
                attributeName="y"
                attributeType="XML"
                begin="0.3s"
                dur="0.6s"
                repeatCount="indefinite"
                values="13; 5; 13"
              />
            </rect>
          </svg>
        </div>
      </Loader>
    </div>
  </div>
</Infinite>
`;
